--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,73 +1,106 @@
 @import "../scss/reset";
 @import "../scss/variables";
-@import "./fonts" ;
+@import "../scss/fonts";
 
 h1 {
-    font-family: "bree serif";
-    text-align: center;
-    margin: 2%;
-    
+  font-family: $font1;
+  text-align: center;
+  margin: $porcentaje * 2;
 }
 
-h2{
-    font-family: "bree serif";
-
+h2 {
+  font-family: $font1;
 }
-    
 
 h3,
 h4,
 h5,
 h6 {
-  font-family:"nunito";
+  font-family: $font2;
 }
 
 body {
-  font-family: "nunito";
+  font-family: $font2;
+}
+
+.banner {
+  width: 100%;
+}
+
+.mapa {
+  border-radius: $porcentaje * 5;
+}
+
+.form_enviar {
+  padding: 5px 10px;
+  background-color: #84b868;
+  border-radius: $tamanio / 2;
+  color: black;
+  border: 1.5px solid black;
+  transition: all 0.5s;
+  &:hover {
+    background-color: black;
+    color: #84b868;
+    transition: all 0.5s;
+  }
+}
+
+.stock_card {
+  width: 20rem;
+  border-radius: $tamanio;
+  border: solid 1px rgba(0, 0, 0, 0.174);
+  margin-bottom: $porcentaje * 5;
+  overflow: auto;
+  text-align: center;
+
+  h3 {
+    margin: $porcentaje * 2;
+  }
+
+  .card_img {
+    width: 100%;
+  }
+
+  .card_txt {
+    list-style: none;
+    transform: translate(-6%);
+  }
 }
 
 /* Navegacion */
 
-#checkbox {
-  display: none;
-}
-
-#checkbox:checked ~ .menu_nav {
+#checkbox,
+.menu label {
   display: none;
 }
 
 .menu {
-  background-color: #fff;
   height: 3.8rem;
   width: 100%;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
 
-  .menu_check {
-
-    label {
-      i {
-        .bx {
-          font-size: 2rem;
-        }
+  label {
+    display: none;
+    i {
+      .bx {
+        font-size: $tamanio * 2;
       }
     }
+  }
 
-    .logo{
-        width: 50px;
-    }
-
-    span {
-      font-size: 2rem;
-      font-family: "bree serif";
-    }
+  span {
+    padding-left: $porcentaje * 2;
+    margin-top: $porcentaje;
+    font-size: $tamanio * 2;
+    font-family: "bree serif";
   }
 
   .menu_nav {
     display: flex;
-    padding: 3%;
-    font-size: 1.1rem;
-    margin-left: 7rem ;
+    width: 50%;
+    padding: $porcentaje * 3;
+    font-size: $tamanio * 1.1;
+    margin-left: $tamanio * 5;
 
     .nav_item {
       margin: 0 0.7rem;
@@ -75,13 +108,14 @@ body {
 
       :hover {
         background-color: #84b868;
+        transition: all 1s;
       }
 
       a {
-        border-radius: 0.8rem;
+        border-radius: $tamanio / 0.2;
         text-decoration: none;
         color: black;
-        padding: 5% 8%;
+        padding: $porcentaje * 6;
       }
     }
   }
@@ -96,21 +130,21 @@ body {
   top: 46%;
   left: 15%;
 
-  h1{   
+  h1 {
     width: 100%;
-    padding: 1rem;
+    padding: $tamanio;
     background-color: rgba(0, 0, 0, 0.473);
-    border-radius: 0.8rem;
+    border-radius: $tamanio;
   }
 }
 
 .stock {
-  padding: 2%;
+  padding: $porcentaje * 2;
   width: 100%;
   height: 100%;
 
   h2 {
-    padding: 1rem;
+    padding: $tamanio;
     font-size: 2.5rem;
     text-align: center;
     justify-content: center;
@@ -118,28 +152,16 @@ body {
 
   .stock_container {
     width: 100%;
+    margin-left: $porcentaje;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
 
     .stock_card {
-      width: 18rem;
-      background-color: white;
-      border-radius: 1rem;
-      text-align: center;
-      border: solid 1px rgb(0, 0, 0);
-
-      h3 {
-      }
-
-      .card_img {
-        width: 100%;
-        border-radius: 1rem;
-      }
-
-      p {
-        background-color: #fff;
-      }
+      width: 17rem;
     }
+  }
+  .stock_boton {
+    text-align: center;
   }
 }
 
@@ -147,14 +169,24 @@ body {
 
 .data {
   width: 100%;
-  padding: 1%;
+  padding: $porcentaje;
   display: flex;
-  /* background-color: rgb(18, 18, 18); */
-  /* background-image: linear-gradient(600deg,  #84b868,#121212); */
 
-  background-image: linear-gradient(to right, #121212, #121212, #121212, #121212, #121212, #1c1d22, #212933, #233644, #135765, #007976, #3e9a75, #84b868 );
-
-  
+  background-image: linear-gradient(
+    to right,
+    #121212,
+    #121212,
+    #121212,
+    #121212,
+    #121212,
+    #1c1d22,
+    #212933,
+    #233644,
+    #135765,
+    #007976,
+    #3e9a75,
+    #84b868
+  );
 
   .presentacion {
     padding: 0% 3% 0% 2%;
@@ -162,19 +194,19 @@ body {
     color: #fff;
 
     h4 {
-      padding: 1%;
+      padding: $porcentaje;
       padding-bottom: 5%;
     }
   }
 
   .ubicacion {
-    padding-right: 1%;
-    padding-bottom: 1%;
+    padding-right: $porcentaje;
+    padding-bottom: $porcentaje;
 
-    h5 {
+    h4 {
       text-align: center;
       color: #fff;
-      padding: 1%;
+      padding: $porcentaje;
     }
   }
 }
@@ -182,24 +214,24 @@ body {
 /* Experiencia de clientes */
 
 .experiencias {
-  h3 {
+  h4 {
     text-align: center;
-    padding-top: 1%;
+    padding-top: $porcentaje;
   }
 
   .exp_container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
-    padding: 2%;
+    padding: $porcentaje * 2;
     margin: 0 0 0 1%;
     text-align: center;
 
     .opinion_card {
       width: 350px;
       background-color: #ebebeb;
-      border-radius: 10px;
-      padding: 1%;
+      border-radius: $tamanio / 0.8;
+      padding: $porcentaje;
 
       .opinion_bubble {
         display: flex;
@@ -218,18 +250,20 @@ body {
 
 .catalogo {
   display: grid;
-  grid-template-columns: 13% 80%;
+  grid-template-columns: 0.5fr 1.5fr;
   grid-template-rows: 0fr auto 0.1fr;
   grid-template-areas:
     "barra vehiculos"
     "barra heviculos"
     "barra numeracion";
 
-
   /* Barra lateral de filtros */
 
+  #check_filter {
+    display: none;
+  }
+
   .barra_lateral {
-    margin-top: 50%;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -237,14 +271,13 @@ body {
     text-align: center;
 
     .filtros {
-      margin: 10%;
-
-      #check_filter {
-        display: none;
-      }
-
-      #check_filter:checked ~ .filter {
-        display: none;
+      margin: $porcentaje * 10;
+      .icono {
+        label {
+          i {
+            font-size: $tamanio * 2;
+          }
+        }
       }
 
       .filter {
@@ -253,8 +286,8 @@ body {
         .financiacion,
         .combustible,
         .traccion {
-          padding: 3%;
-          margin: 0.7rem;
+          padding: $porcentaje * 3;
+          margin: 0.5rem;
         }
       }
     }
@@ -264,116 +297,93 @@ body {
 
   .vehiculos {
     grid-area: vehiculos;
-
-
-    .vehiculos_container {
-      width: 100%;
-      height: 100%;
-      margin: 1%;
-      margin-left: 5%;
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-
-      .card {
-        margin: 1rem;
-      }
-    }
+    width: 100%;
+    margin: $porcentaje;
+    margin-left: $porcentaje * 5;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 0.5rem;
   }
 
   /* Pie numerado de paginas */
 
   .numeracion {
     grid-area: numeracion;
-    margin-bottom: 2%;
+    margin-bottom: $porcentaje * 5;
     margin-left: 35%;
   }
 }
 
 /* Pagina de nosotros */
 
-.nosotros_bienvenida{
-    text-align: center;
-    margin: 2rem 0;
-
+.nosotros_bienvenida {
+  text-align: center;
+  margin: 2rem 0;
 }
 
-.nosotros_historia{
+.nosotros_historia {
+  display: grid;
+  grid-template-columns: 2fr 2fr;
+  text-align: center;
 
-    display: grid;
-    grid-template-columns: 2fr 3fr;
-    text-align: center;
-    .historia_txt{
-        padding: 0 7%;
+  .historia_txt {
+    padding: 0 7%;
 
+    h4 {
+      font-size: 1.8rem;
+    }
+  }
 
-        h4{
-            font-size: 1.8rem;
+  .historia_img {
+    margin-top: $tamanio * 3;
+    .img_grupo {
+      list-style: none;
+      .img_foto {
+        margin: 2%;
+        img {
+          width: 25rem;
+          border-radius: $tamanio;
         }
+      }
     }
-
-    .historia_img{
-        
-        .img_grupo{
-            list-style: none;
-            .img_foto{
-                img{
-                width: 25rem;
-                }
-            }
-            }
-        
-    }
+  }
 }
-
-
-
-
-
-
-
-
 
 /*Pagina de contacto */
-
 
 .info {
   display: flex;
 
   .ubicacion {
-    width: 100%;
+    width: 60%;
     text-align: center;
-    padding: 1%;
-    
+    padding: $porcentaje;
 
     h2,
     h4 {
-      margin: 3%;
-    }
-
-    .mapa{
-        border-radius: 5%;
+      margin: $porcentaje * 3;
     }
   }
 
   .form {
-    width: 70%;
+    width: 50%;
     text-align: center;
-    margin: 5%;
-    margin-top: 3%;
-    
+    padding: $porcentaje;
+    margin-right: $porcentaje * 4;
 
     h2 {
-      padding: 1%;
+      margin: $porcentaje * 3;
+      margin-bottom: $porcentaje * 7;
     }
 
     .form-floating {
       box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.35);
-        border-radius: 5%;
+      border-radius: $tamanio;
     }
   }
 
   .btn {
-    margin: 2%;
+    margin: $porcentaje * 2;
   }
 }
 
@@ -386,27 +396,26 @@ body {
   display: flex;
   justify-content: space-between;
   color: #fff;
-  padding: 1% 4% ;
+  padding: 1% 4%;
   .links,
   .redes,
   .contact {
     h2 {
-        font-size: 1.6rem;
+      font-size: 1.6rem;
     }
 
     ul {
-        padding: 0;    
-        padding-top: 1rem;
-        width: 160px;
-        height: 90px;
-        display: flex;
-        flex-direction: column;
-        
+      padding: 0;
+      padding-top: $tamanio;
+      width: 160px;
+      height: 90px;
+      display: flex;
+      flex-direction: column;
+
       .link_item {
         list-style: none;
 
         a {
-            
           color: #fff;
           display: flex;
           align-items: center;
@@ -414,7 +423,7 @@ body {
 
           i {
             color: #84b868;
-            padding: 3%;
+            padding: $porcentaje * 3;
 
             .bx {
               margin-right: 6px;
@@ -425,38 +434,37 @@ body {
       }
     }
   }
-  
-  }
-  .contacto{
-    margin-right: 5rem;
-    text-align: center;
-
-    .boton_buscar{
-        margin-top: 1rem;
-        
-        .form_buscar{
-            display: flex;
-            gap: 5%;
-            input{
-                padding: 2%;
-                border-radius: 0.5rem;
-            }
-        }
-
-        .form_enviar{
-            padding: 1%;
-            background-color: black;
-            border-radius: 0.5rem;
-            color: #84b868;
-            border: 1px solid #84b868;
-            &:hover{
-                background-color: #84b868;
-                color: black;
-            }
-        }
-    }
 }
+.contacto {
+  margin-right: 5rem;
+  text-align: center;
 
+  .boton_buscar {
+    margin-top: $tamanio;
 
+    .form_buscar {
+      display: flex;
+      gap: $porcentaje * 5;
+      input {
+        padding: $porcentaje * 2;
+        border-radius: $tamanio / 2;
+      }
+
+      .form_enviar {
+        padding: $porcentaje;
+        background-color: black;
+        border-radius: $tamanio / 2;
+        color: #84b868;
+        border: 1px solid #84b868;
+        transition: all 1s;
+        &:hover {
+          background-color: #84b868;
+          color: black;
+          transition: all 1s;
+        }
+      }
+    }
+  }
+}
 
 @import "../scss/queries";
