--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ body {
   width: 20rem;
   border-radius: 1rem;
   border: solid 1px rgba(0, 0, 0, 0.174);
-  margin-bottom: 5%;
+  margin-bottom: 10%;
   overflow: auto;
   text-align: center;
 }
@@ -131,7 +131,6 @@ body {
 }
 
 .stock {
-  padding: 2%;
   width: 100%;
   height: 100%;
 }
@@ -151,6 +150,7 @@ body {
   width: 17rem;
 }
 .stock .stock_boton {
+  margin-bottom: 2rem;
   text-align: center;
 }
 
@@ -269,7 +269,8 @@ body {
   text-align: center;
 }
 .nosotros_historia .historia_txt {
-  padding: 0 7%;
+  margin-top: 3rem;
+  padding: 0 6%;
 }
 .nosotros_historia .historia_txt h4 {
   font-size: 1.8rem;
@@ -288,6 +289,7 @@ body {
   border-radius: 1rem;
 }
 
+/* Pagina de F.A.Q */
 /*Pagina de contacto */
 .info {
   display: flex;
@@ -386,23 +388,28 @@ body {
 .footer .contact ul .link_items a i .bx {
   font-size: 1.2rem;
 }
-
-.contacto {
+.footer .links ul {
+  transform: translate(30%);
+}
+.footer .redes ul {
+  transform: translate(15%);
+}
+.footer .contacto {
   margin-right: 5rem;
   text-align: center;
 }
-.contacto .boton_buscar {
+.footer .contacto .boton_buscar {
   margin-top: 1rem;
 }
-.contacto .boton_buscar .form_buscar {
+.footer .contacto .boton_buscar .form_buscar {
   display: flex;
   gap: 5%;
 }
-.contacto .boton_buscar .form_buscar input {
-  padding: 2%;
-  border-radius: 0.5rem;
+.footer .contacto .boton_buscar .form_buscar input {
+  padding: 3%;
+  border-radius: 2rem;
 }
-.contacto .boton_buscar .form_buscar .form_enviar {
+.footer .contacto .boton_buscar .form_buscar .form_enviar {
   padding: 1%;
   background-color: black;
   border-radius: 0.5rem;
@@ -410,7 +417,7 @@ body {
   border: 1px solid #84b868;
   transition: all 1s;
 }
-.contacto .boton_buscar .form_buscar .form_enviar:hover {
+.footer .contacto .boton_buscar .form_buscar .form_enviar:hover {
   background-color: #84b868;
   color: black;
   transition: all 1s;
@@ -553,7 +560,7 @@ body {
   }
   .footer {
     text-align: center;
-    height: 40rem;
+    height: 35rem;
     display: grid;
     grid-template-rows: repeat(3, 1fr);
   }
