--- a/scss/style.scss
+++ b/scss/style.scss
@@ -49,7 +49,7 @@ body {
   width: 20rem;
   border-radius: $tamanio;
   border: solid 1px rgba(0, 0, 0, 0.174);
-  margin-bottom: $porcentaje * 5;
+  margin-bottom: $porcentaje * 10;
   overflow: auto;
   text-align: center;
 
@@ -140,7 +140,6 @@ body {
 }
 
 .stock {
-  padding: $porcentaje * 2;
   width: 100%;
   height: 100%;
 
@@ -162,6 +161,7 @@ body {
     }
   }
   .stock_boton {
+    margin-bottom: $tamanio * 2;
     text-align: center;
   }
 }
@@ -328,7 +328,8 @@ body {
   text-align: center;
 
   .historia_txt {
-    padding: 0 7%;
+    margin-top: $tamanio * 3;
+    padding: 0 6%;
 
     h4 {
       font-size: 1.8rem;
@@ -349,6 +350,13 @@ body {
     }
   }
 }
+
+/* Pagina de F.A.Q */
+
+
+
+
+
 
 /*Pagina de contacto */
 
@@ -437,33 +445,46 @@ body {
       }
     }
   }
-}
-.contacto {
-  margin-right: 5rem;
-  text-align: center;
 
-  .boton_buscar {
-    margin-top: $tamanio;
+  .links {
+    ul {
+      transform: translate(30%);
+    }
+  }
 
-    .form_buscar {
-      display: flex;
-      gap: $porcentaje * 5;
-      input {
-        padding: $porcentaje * 2;
-        border-radius: $tamanio / 2;
-      }
+  .redes {
+    ul {
+      transform: translate(15%);
+    }
+  }
 
-      .form_enviar {
-        padding: $porcentaje;
-        background-color: black;
-        border-radius: $tamanio / 2;
-        color: #84b868;
-        border: 1px solid #84b868;
-        transition: all 1s;
-        &:hover {
-          background-color: #84b868;
-          color: black;
+  .contacto {
+    margin-right: 5rem;
+    text-align: center;
+
+    .boton_buscar {
+      margin-top: $tamanio;
+
+      .form_buscar {
+        display: flex;
+        gap: $porcentaje * 5;
+        input {
+          padding: $porcentaje * 3;
+          border-radius: $tamanio * 2;
+        }
+
+        .form_enviar {
+          padding: $porcentaje;
+          background-color: black;
+          border-radius: $tamanio / 2;
+          color: #84b868;
+          border: 1px solid #84b868;
           transition: all 1s;
+          &:hover {
+            background-color: #84b868;
+            color: black;
+            transition: all 1s;
+          }
         }
       }
     }
