avanzando con detalles y comentarios

--- a/css/style.css
+++ b/css/style.css
@@ -38,15 +38,14 @@ body {
 
 .form_enviar {
   padding: 5px 10px;
-  background-color: #84b868;
   border-radius: 0.5rem;
-  color: black;
-  border: 1.5px solid black;
+  color: #3e9a75;
+  border: 1.5px solid #3e9a75;
   transition: all 0.5s;
 }
 .form_enviar:hover {
-  background-color: black;
-  color: #84b868;
+  background-color: #3e9a75;
+  color: white;
   transition: all 0.5s;
 }
 
@@ -79,6 +78,7 @@ body {
   height: 3.8rem;
   width: 100%;
   display: flex;
+  justify-content: space-between;
 }
 .menu label {
   display: none;
@@ -88,31 +88,31 @@ body {
 }
 .menu span {
   padding-left: 2%;
-  margin-top: 1%;
   font-size: 2rem;
+  padding: 0.4%;
   font-family: "bree serif";
+  margin-left: 1%;
 }
 .menu .menu_nav {
   display: flex;
-  width: 50%;
+  width: 40%;
   padding: 1%;
-  font-size: 1.1rem;
-  margin-left: 5rem;
+  font-size: 1.2rem;
+  justify-content: space-around;
 }
 .menu .menu_nav .nav_item {
   padding: 1%;
-  margin: 0 0.7rem;
   list-style: none;
 }
 .menu .menu_nav .nav_item :hover {
-  background-color: #84b868;
+  background-color: #3e9a75;
   transition: all 1s;
 }
 .menu .menu_nav .nav_item a {
-  border-radius: 5rem;
+  border-radius: 0.3rem;
   text-decoration: none;
   color: black;
-  padding: 6%;
+  padding: 5%;
 }
 
 /*Pagina de inicio*/
@@ -205,7 +205,7 @@ body {
   flex-direction: column;
 }
 .experiencias .exp_container .opinion_card .opinion_happy {
-  color: #84b868;
+  color: #3e9a75;
 }
 
 /*Pagina de catalogo */
@@ -297,6 +297,10 @@ body {
   margin-left: 10%;
   margin-bottom: 5%;
 }
+.accordion .accordion-item h2 .accordion-button {
+  color: black;
+  background-color: rgba(62, 154, 117, 0.8745098039);
+}
 
 /*Pagina de contacto */
 .info {
@@ -307,9 +311,14 @@ body {
   text-align: center;
   padding: 1%;
 }
-.info .ubicacion h2,
+.info .ubicacion h2 {
+  margin: 3%;
+}
 .info .ubicacion h4 {
   margin: 3%;
+}
+.info .ubicacion h4 i {
+  color: #3e9a75;
 }
 .info .form {
   width: 50%;
@@ -324,9 +333,6 @@ body {
 .info .form .form-floating {
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.35);
   border-radius: 1rem;
-}
-.info .btn {
-  margin: 2%;
 }
 
 /* footer */
@@ -384,7 +390,7 @@ body {
 .footer .redes ul .link_items a i,
 .footer .contact ul .link_item a i,
 .footer .contact ul .link_items a i {
-  color: #84b868;
+  color: #3e9a75;
   padding: 3%;
   align-items: center;
 }
@@ -421,12 +427,12 @@ body {
   padding: 1%;
   background-color: black;
   border-radius: 0.5rem;
-  color: #84b868;
-  border: 1px solid #84b868;
+  color: #3e9a75;
+  border: 1px solid #3e9a75;
   transition: all 1s;
 }
 .footer .contacto .boton_buscar .form_buscar .form_enviar:hover {
-  background-color: #84b868;
+  background-color: #3e9a75;
   color: black;
   transition: all 1s;
 }
@@ -523,7 +529,7 @@ body {
     display: none;
   }
   .menu #checkbox:checked ~ .menu_nav {
-    background-color: rgba(122, 183, 90, 0.7568627451);
+    background-color: #3e9a75;
     width: 100%;
     height: 20rem;
     position: absolute;
