--- a/scss/_queries.scss
+++ b/scss/_queries.scss
@@ -132,7 +132,7 @@
   }
 
   .menu #checkbox:checked ~ .menu_nav {
-    background-color: #7ab75ac1;
+    background-color: #3e9a75;
     width: 100%;
     height: 20rem;
     position: absolute;
