--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,14 +33,13 @@ body {
 
 .form_enviar {
   padding: 5px 10px;
-  background-color: #84b868;
   border-radius: $tamanio / 2;
-  color: black;
-  border: 1.5px solid black;
+  color: #3e9a75;
+  border: 1.5px solid #3e9a75;
   transition: all 0.5s;
   &:hover {
-    background-color: black;
-    color: #84b868;
+    background-color: #3e9a75;
+    color: white;
     transition: all 0.5s;
   }
 }
@@ -78,6 +77,7 @@ body {
   height: 3.8rem;
   width: 100%;
   display: flex;
+  justify-content: space-between;
 
   label {
     display: none;
@@ -90,33 +90,33 @@ body {
 
   span {
     padding-left: $porcentaje * 2;
-    margin-top: $porcentaje;
     font-size: $tamanio * 2;
+    padding: $porcentaje * 0.4;
     font-family: "bree serif";
+    margin-left: $porcentaje;
   }
 
   .menu_nav {
     display: flex;
-    width: 50%;
-    padding: $porcentaje * 1;
-    font-size: $tamanio * 1.1;
-    margin-left: $tamanio * 5;
+    width: 40%;
+    padding: $porcentaje;
+    font-size: $tamanio * 1.2;
+    justify-content: space-around;
 
     .nav_item {
-      padding: 1%;
-      margin: 0 0.7rem;
+      padding: $porcentaje;
       list-style: none;
 
       :hover {
-        background-color: #84b868;
+        background-color: #3e9a75;
         transition: all 1s;
       }
 
       a {
-        border-radius: $tamanio / 0.2;
+        border-radius: $tamanio * 0.3;
         text-decoration: none;
         color: black;
-        padding: $porcentaje * 6;
+        padding: $porcentaje * 5;
       }
     }
   }
@@ -241,7 +241,7 @@ body {
       }
 
       .opinion_happy {
-        color: #84b868;
+        color: #3e9a75;
       }
     }
   }
@@ -353,17 +353,22 @@ body {
 
 /* Pagina de F.A.Q */
 
-
-.accordion{
+.accordion {
   display: flex;
   flex-direction: column;
   width: 80%;
-  margin-left: $porcentaje *10;
-  margin-bottom: $porcentaje *5;
+  margin-left: $porcentaje * 10;
+  margin-bottom: $porcentaje * 5;
+
+  .accordion-item {
+    h2 {
+      .accordion-button {
+        color: black;
+        background-color: #3e9a75df;
+      }
+    }
+  }
 }
-
-
-
 
 /*Pagina de contacto */
 
@@ -375,9 +380,15 @@ body {
     text-align: center;
     padding: $porcentaje;
 
-    h2,
+    h2 {
+      margin: $porcentaje * 3;
+    }
+
     h4 {
       margin: $porcentaje * 3;
+      i {
+        color: #3e9a75;
+      }
     }
   }
 
@@ -396,10 +407,6 @@ body {
       box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.35);
       border-radius: $tamanio;
     }
-  }
-
-  .btn {
-    margin: $porcentaje * 2;
   }
 }
 
@@ -441,7 +448,7 @@ body {
           text-decoration: none;
 
           i {
-            color: #84b868;
+            color: #3e9a75;
             padding: $porcentaje * 3;
             align-items: center;
             .bx {
@@ -484,11 +491,11 @@ body {
           padding: $porcentaje;
           background-color: black;
           border-radius: $tamanio / 2;
-          color: #84b868;
-          border: 1px solid #84b868;
+          color: #3e9a75;
+          border: 1px solid #3e9a75;
           transition: all 1s;
           &:hover {
-            background-color: #84b868;
+            background-color: #3e9a75;
             color: black;
             transition: all 1s;
           }
