--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,9 @@ body {
 
 .form_enviar {
   padding: 5px 10px;
-  border-radius: 0.5rem;
+  margin: 3%;
+  border-radius: 2rem;
+  background-color: #fff;
   color: #3e9a75;
   border: 1.5px solid #3e9a75;
   transition: all 0.5s;
@@ -118,10 +120,10 @@ body {
 /*Pagina de inicio*/
 .eslogan {
   color: rgba(255, 255, 255, 0.7254901961);
-  z-index: 1;
   position: absolute;
-  top: 46%;
-  left: 15%;
+  top: 47%;
+  z-index: 1;
+  margin-left: 12%;
 }
 .eslogan h1 {
   width: 100%;
@@ -196,7 +198,7 @@ body {
 .experiencias .exp_container .opinion_card {
   width: 350px;
   background-color: #ebebeb;
-  border-radius: 1.25rem;
+  border-radius: 0.8rem;
   padding: 1%;
 }
 .experiencias .exp_container .opinion_card .opinion_bubble {
@@ -307,7 +309,7 @@ body {
   display: flex;
 }
 .info .ubicacion {
-  width: 60%;
+  width: 80%;
   text-align: center;
   padding: 1%;
 }
@@ -426,7 +428,7 @@ body {
 .footer .contacto .boton_buscar .form_buscar .form_enviar {
   padding: 1%;
   background-color: black;
-  border-radius: 0.5rem;
+  border-radius: 1rem;
   color: #3e9a75;
   border: 1px solid #3e9a75;
   transition: all 1s;
@@ -437,19 +439,11 @@ body {
   transition: all 1s;
 }
 
-@media (max-width: 1220px) {
-  .eslogan {
-    top: 16%;
-    transform: translate(-5%);
-  }
-  .stock_card {
-    width: 19rem;
-  }
-}
 @media (max-width: 1160px) {
   .stock .stock_container {
-    transform: translate(8%);
+    transform: translate(4%);
     grid-template-columns: repeat(2, 1fr);
+    margin: 5%;
   }
   .stock .stock_container .stock_card {
     width: 22rem;
@@ -513,9 +507,14 @@ body {
   }
   .info {
     flex-direction: column;
-    transform: translate(20%);
   }
-  .form .form-floating {
+  .info .ubicacion {
+    transform: translate(12%);
+  }
+  .info .form {
+    transform: translate(40%);
+  }
+  .info .form .form-floating {
     width: 150%;
     transform: translate(-10%);
   }
@@ -525,19 +524,23 @@ body {
     margin: 3% 2%;
     display: block;
   }
+  .menu span {
+    justify-content: center;
+    margin-right: 33%;
+  }
   .menu .menu_nav {
     display: none;
   }
   .menu #checkbox:checked ~ .menu_nav {
-    background-color: #3e9a75;
+    background-color: rgba(62, 154, 117, 0.7882352941);
     width: 100%;
-    height: 20rem;
+    height: 15rem;
     position: absolute;
     top: 60px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    z-index: 2;
+    z-index: 100;
     padding: 2%;
   }
   .eslogan {
@@ -558,7 +561,7 @@ body {
     height: 100%;
   }
   .catalogo .numeracion {
-    margin-top: 10%;
+    margin-left: 25%;
   }
   .nosotros_historia {
     display: flex;
@@ -572,15 +575,19 @@ body {
   .nosotros_historia .historia_img .img_grupo .img_foto img {
     width: 15rem;
   }
+  .nosotros_historia .info .ubicacion {
+    width: 100%;
+  }
   .footer {
     text-align: center;
-    height: 35rem;
+    height: 40rem;
     display: grid;
     grid-template-rows: repeat(3, 1fr);
   }
   .footer .links ul,
   .footer .redes ul {
     transform: translate(40%);
+    margin-bottom: 0%;
   }
   .footer .contact .contacto .link_items {
     transform: translate(26%);
@@ -595,6 +602,12 @@ body {
   }
   .vehiculos .stock_card {
     width: 13rem;
+  }
+  .info h2 {
+    font-size: 1.5rem;
+  }
+  .info .ubicacion h4 {
+    font-size: 1rem;
   }
 }
 @media (max-width: 576px) {
