--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ body {
 
 .form_enviar {
   padding: 5px 10px;
-  margin: 3%;
+  margin: 1%;
   border-radius: 2rem;
   background-color: #fff;
   color: #3e9a75;
@@ -55,7 +55,7 @@ body {
   width: 20rem;
   border-radius: 1rem;
   border: solid 1px rgba(0, 0, 0, 0.174);
-  margin-bottom: 10%;
+  margin-bottom: 1%;
   overflow: auto;
   text-align: center;
 }
@@ -144,7 +144,6 @@ body {
 }
 .stock .stock_container {
   width: 100%;
-  margin-left: 1%;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
 }
@@ -152,7 +151,8 @@ body {
   width: 17rem;
 }
 .stock .stock_boton {
-  margin-bottom: 2rem;
+  margin-bottom: 4%;
+  margin-left: 3%;
   text-align: center;
 }
 
@@ -214,7 +214,6 @@ body {
 .catalogo {
   display: grid;
   grid-template-columns: 0.5fr 1.5fr;
-  grid-template-rows: 0fr auto 0.1fr;
   grid-template-areas: "barra vehiculos" "barra heviculos" "barra numeracion";
   /* Barra lateral de filtros */
   /* Grilla de vehiculos */
@@ -255,8 +254,7 @@ body {
 }
 .catalogo .numeracion {
   grid-area: numeracion;
-  margin-bottom: 5%;
-  margin-left: 35%;
+  margin-left: 40%;
 }
 
 /* Pagina de nosotros */
@@ -463,7 +461,7 @@ body {
 }
 @media (max-width: 992px) {
   .eslogan {
-    top: 12%;
+    top: 25%;
   }
   .eslogan h1 {
     font-size: 1.8em;
@@ -484,6 +482,12 @@ body {
   .catalogo .vehiculos {
     grid-template-columns: repeat(2, 1fr);
   }
+  .stock {
+    transform: translate(-3%);
+  }
+  .catalogo .numeracion {
+    transform: translate(-25%);
+  }
   .footer {
     justify-content: space-evenly;
   }
@@ -493,14 +497,11 @@ body {
     padding-left: 0;
     margin: 0;
   }
-  .catalogo .numeracion {
-    margin-top: 5%;
-    margin-left: 20%;
-  }
 }
 @media (max-width: 890px) {
   .eslogan h1 {
     font-size: 1.5rem;
+    transform: translate(0, -50%);
   }
   .nosotros_historia .historia_img .img_grupo .img_foto img {
     width: 20rem;
@@ -532,7 +533,7 @@ body {
     display: none;
   }
   .menu #checkbox:checked ~ .menu_nav {
-    background-color: rgba(62, 154, 117, 0.7882352941);
+    background-color: rgba(62, 154, 117, 0.8862745098);
     width: 100%;
     height: 15rem;
     position: absolute;
@@ -544,13 +545,19 @@ body {
     padding: 2%;
   }
   .eslogan {
-    top: 10%;
+    top: 22%;
+  }
+  .stock .stock_container {
+    transform: translate(7%);
   }
   .stock .stock_container .stock_card {
     width: 15rem;
   }
   .catalogo {
     grid-template-columns: 0.2fr 2fr;
+  }
+  .catalogo .numeracion {
+    transform: translate(3%);
   }
   .filtros .filter {
     display: none;
@@ -595,10 +602,10 @@ body {
 }
 @media (max-width: 700px) {
   .eslogan {
-    margin-left: 2%;
+    font-size: 0.5rem;
   }
-  .eslogan h1 {
-    font-size: 1.2rem;
+  .stock .stock_container {
+    transform: translate(5%);
   }
   .vehiculos .stock_card {
     width: 13rem;
@@ -612,7 +619,8 @@ body {
 }
 @media (max-width: 576px) {
   .eslogan {
-    top: 8%;
+    top: 19%;
+    margin-left: 15%;
   }
   .eslogan h1 {
     font-size: 1rem;
@@ -627,6 +635,9 @@ body {
   .catalogo .vehiculos .stock_card {
     width: 18rem;
   }
+  .catalogo .numeracion {
+    transform: translate(-9%);
+  }
   .mapa {
     height: 150px;
   }
@@ -640,9 +651,18 @@ body {
   }
 }
 @media (max-width: 500px) {
+  .menu span {
+    font-size: 1.5rem;
+    transform: translate(-10%, 15%);
+  }
   .eslogan {
-    top: 8% h1;
-    top-font-size: 0.8rem;
+    top: 17%;
+  }
+  .eslogan h1 {
+    font-size: 0.8rem;
+  }
+  .stock .stock_container {
+    transform: translate(7%);
   }
   .stock .stock_container .stock_card {
     width: 10rem;
