--- a/scss/_queries.scss
+++ b/scss/_queries.scss
@@ -30,7 +30,7 @@
 
 @media (max-width: 992px) {
   .eslogan {
-    top: 12%;
+    top: 25%;
     h1 {
       font-size: 1.8em;
     }
@@ -57,6 +57,19 @@
     }
   }
 
+  .stock{
+    
+    transform: translate(-3%);
+    .stock_container{
+    }
+  }
+
+  .catalogo{
+    .numeracion{
+      transform: translate(-25%);
+    }
+  }
+
   .footer {
     justify-content: space-evenly;
   }
@@ -70,18 +83,13 @@
     }
   }
 
-  .catalogo {
-    .numeracion {
-      margin-top: 5%;
-      margin-left: 20%;
-    }
-  }
 }
 
 @media (max-width: 890px) {
   .eslogan {
     h1 {
       font-size: 1.5rem;
+      transform: translate(0,-50%);
     }
   }
   .nosotros_historia {
@@ -133,7 +141,7 @@
   }
 
   .menu #checkbox:checked ~ .menu_nav {
-    background-color: #3e9a75c9;
+    background-color: #3e9a75e2;
     width: 100%;
     height: 15rem;
     position: absolute;
@@ -146,11 +154,12 @@
   }
 
   .eslogan {
-    top: 10%;
+    top: 22%;
   }
 
   .stock {
     .stock_container {
+    transform: translate(7%);
       .stock_card {
         width: 15rem;
       }
@@ -159,6 +168,9 @@
 
   .catalogo {
     grid-template-columns: 0.2fr 2fr;
+    .numeracion{
+      transform: translate(3%);
+    }
   }
 
   .filtros {
@@ -228,10 +240,14 @@
 }
 
 @media (max-width: 700px) {
-  .eslogan {
-    margin-left: 2%;
-    h1 {
-      font-size: 1.2rem;
+
+  .eslogan{
+    font-size: .5rem;
+  }
+
+  .stock {
+    .stock_container {
+    transform: translate(5%);
     }
   }
 
@@ -256,7 +272,8 @@
 
 @media (max-width: 576px) {
   .eslogan {
-    top: 8%;
+    top: 19%;
+    margin-left: 15%;
     h1 {
       font-size: 1rem;
     }
@@ -269,9 +286,6 @@
       }
     }
 
-    
-
-
   }
 
   .catalogo {
@@ -281,6 +295,10 @@
       .stock_card {
         width: 18rem;
       }
+    }
+
+    .numeracion{
+      transform: translate(-9%);
     }
   }
 
@@ -300,14 +318,25 @@
 }
 
 @media (max-width: 500px) {
+
+  .menu{
+    span{
+      font-size: 1.5rem;
+      transform: translate(-10%, 15%);
+    }
+  }
+
+
   .eslogan {
-    top: 8% h1 {
+    top: 17%;
+     h1 {
       font-size: 0.8rem;
     }
   }
 
   .stock {
     .stock_container {
+      transform: translate(7%);
       .stock_card {
         width: 10rem;
       }
