--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,7 +33,7 @@ body {
 
 .form_enviar {
   padding: 5px 10px;
-  margin: $porcentaje *3;
+  margin: $porcentaje;
   border-radius: $tamanio * 2;
   background-color: #fff;
   color: #3e9a75;
@@ -50,7 +50,7 @@ body {
   width: 20rem;
   border-radius: $tamanio;
   border: solid 1px rgba(0, 0, 0, 0.174);
-  margin-bottom: $porcentaje * 10;
+  margin-bottom: $porcentaje ;
   overflow: auto;
   text-align: center;
 
@@ -138,7 +138,6 @@ body {
     padding: $tamanio;
     background-color: rgba(0, 0, 0, 0.473);
     border-radius: $tamanio;
-    
   }
 }
 
@@ -155,7 +154,6 @@ body {
 
   .stock_container {
     width: 100%;
-    margin-left: $porcentaje;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
 
@@ -164,7 +162,8 @@ body {
     }
   }
   .stock_boton {
-    margin-bottom: $tamanio * 2;
+    margin-bottom: $porcentaje * 4;
+    margin-left: $porcentaje * 3;
     text-align: center;
   }
 }
@@ -255,7 +254,6 @@ body {
 .catalogo {
   display: grid;
   grid-template-columns: 0.5fr 1.5fr;
-  grid-template-rows: 0fr auto 0.1fr;
   grid-template-areas:
     "barra vehiculos"
     "barra heviculos"
@@ -313,8 +311,7 @@ body {
 
   .numeracion {
     grid-area: numeracion;
-    margin-bottom: $porcentaje * 5;
-    margin-left: 35%;
+    margin-left: 40%;
   }
 }
 
@@ -424,7 +421,7 @@ body {
   justify-content: space-between;
   color: #fff;
   padding: 1% 4%;
-  
+
   .links,
   .redes,
   .contact {
