--- a/css/style.css
+++ b/css/style.css
@@ -674,5 +674,17 @@ body {
     width: 12rem;
   }
 }
+@media (max-width: 400px) {
+  .menu span {
+    font-size: 1.2rem;
+  }
+  .stock .stock_container {
+    margin-left: 0;
+  }
+  .catalogo .numeracion {
+    margin-top: 5%;
+    margin-left: 12%;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
